--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 </head>
 
 <body onload="init()">
+    <h1>Mine Sweeper</h1>
+
+    <div class="difficulties">
+        <h3 onclick="setDifficulty()"> Easy || </h3>
+        <h3 onclick="setDifficulty()"> Intermidate || </h3>
+        <h3 onclick="setDifficulty()"> Hard || </h3>
+        <h3 onclick="setDifficulty()"> Csutom size</h3>
+    </div>
+
+
     <div class="Sweeper-outer">
         <div class="Sweeper-inner">
 
         </div>
-        
+
     </div>
 
 
