--- a/index.html
+++ b/index.html
@@ -8,22 +8,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body onload="init()">
+<body >
     <h1>Mine Sweeper</h1>
 
-    <div class="difficulties">
-        <h3 onclick="setDifficulty()"> Easy || </h3>
-        <h3 onclick="setDifficulty()"> Intermidate || </h3>
-        <h3 onclick="setDifficulty()"> Hard || </h3>
-        <h3 onclick="setDifficulty()"> Csutom size</h3>
+    <div class="difficulties-title">
+        <h3 onclick="setDifficulty(this)" class="difficulties"> Easy || </h3>
+        <h3 onclick="setDifficulty(this)" class="difficulties"> Intermidate || </h3>
+        <h3 onclick="setDifficulty(this)" class="difficulties"> Hard || </h3>
+        <h3 onclick="setDifficulty(this)" class="difficulties"> Custom size</h3>
     </div>
 
+    <div class="flagAndTimer">
+        <div class="flagAmount"><span></span></div>
+        <div class="timer"><span>00:00:00</span></div>
+    </div>
 
     <div class="Sweeper-outer">
         <div class="Sweeper-inner">
 
         </div>
 
+    </div>
+
+
+    <div class="modal">
+        <h2>Well, you <span></span> </h2>
+        <button onclick="playAgain()" class="play-again">Play again?</button>
     </div>
 
 
