--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body >
+<body>
     <h1>Mine Sweeper</h1>
 
     <div class="difficulties-title">
@@ -27,7 +27,21 @@
         <div class="Sweeper-inner">
 
         </div>
+    </div>
 
+    <div class="lifesAndClues">
+        <div class="lifesAmount"><span>
+                <img src="life.PNG" alt="life">
+                <img src="life.PNG" alt="life">
+                <img src="life.PNG" alt="life">
+            </span>
+        </div>
+        <div class="cluesAmount"><span>
+                <img onclick="getClueCondition(this)" src="clue.PNG" alt="clue">
+                <img onclick="getClueCondition(this)" src="clue.PNG" alt="clue">
+                <img onclick="getClueCondition(this)" src="clue.PNG" alt="clue">
+            </span>
+        </div>
     </div>
 
 
